--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Build Docker Image
         uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: "8.0.0"
+          arguments: bootBuildImage
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
