--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build Docker Image
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: "8.3.0"
+          gradle-version: 8.3
           arguments: bootBuildImage
 
       - name: Configure AWS Credentials
