--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -44,10 +44,11 @@ jobs:
         shell: bash
         env:
           CONTAINER_BUILD_NAME: jwt-service
-          ECR_REGISTRY: public.ecr.aws
+          ECR_REGISTRY_DOMAIN: public.ecr.aws
+          ECR_REGISTRY_ALIAS: n0n6f0e7
           ECR_REPOSITORY: jwt-service-sandbox
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker tag $CONTAINER_BUILD_NAME $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "image=${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+          docker tag $CONTAINER_BUILD_NAME $ECR_REGISTRY_DOMAIN/$ECR_REGISTRY_ALIAS/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY_DOMAIN/$ECR_REGISTRY_ALIAS/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "image=${{ env.ECR_REGISTRY_DOMAIN }}/${{ env.ECR_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
