--- a/.github/workflows/docker_push.yml
+++ b/.github/workflows/docker_push.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
         with:
+          registry-type: public
           mask-password: true
 
       - name: Get current artifact version
